--- a/function/index.html
+++ b/function/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>function</title>
     <script defer src="main.js"></script>
+    <script defer src="main2.js"></script>
   </head>
   <body></body>
 </html>
