--- a/array/index.html
+++ b/array/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Array</title>
     <script defer src="main.js"></script>
+    <script defer src="array-api.js"></script>
   </head>
   <body></body>
 </html>
